--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header class="header">
         <div class="container">
             <input type="checkbox" id="menu" class="container__button">
-            <label for="menu">
-                <span class="header__menu container__img"></span>
+            <label for="menu" class="container__label">
+                <span class="header__menu"></span>
             </label>
             <ul class="list-menu">
                 <li class="list-menu__title">Categorias</li>
@@ -32,7 +32,9 @@
         </div>
         <ul class="options">
             <input type="checkbox" id="options-menu" class="options__button">
-            <label for="options-menu"><li class="options__item">Categorias</li></label>
+            <label for="options-menu" class="options__label">
+                <li class="options__item">Categorias</li>
+            </label>
             <ul class="list-menu">
                 <li class="list-menu__item"><a href="#" class="list-menu__link">Programação</a></li>
                 <li class="list-menu__item"><a href="#" class="list-menu__link">Front-End</a></li>
@@ -44,12 +46,12 @@
             <li class="options__item"><a href="#" class="options__anchor">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#" class="container__anchor container__anchor-transparent"><img src="./img/mobile/Fav.svg " alt="Fav" class="container__img"></a>
-            <a href="#" class="container__anchor">
+            <a href="#" class="container__anchor container__anchor-transparent"><img src="./img/mobile/Fav.svg " alt="Fav" class="container__img click__active"></a>
+            <a href="#" class="container__anchor click__active">
                 <img src="./img/mobile/Shop.svg" alt="Shop" class="container__img">
                 <p class="container__text">Minha sacola</p>
             </a>
-            <a href="#" class="container__anchor">
+            <a href="#" class="container__anchor click__active">
                 <img src="./img/mobile/User.svg" alt="User" class="container__img">
                 <p class="container__text">Meu perfil</p>
             </a>
@@ -102,10 +104,20 @@
                 <div class="card__buttons">
                     <!-- 1st column -->
                     <ul class="buttons">
-                        <li class="buttons__item"><img src="./img/mobile/Fav.svg" alt="Fav Book" class="buttons__item-img" ></li>
-                        <li class="buttons__item"><img src="./img/mobile/Shop.svg" alt="Add On Cart" class="buttons__item-img" ></li>
+                        <li class="buttons__item">
+                            <input type="checkbox" id="like-1" class="container__button">
+                            <label for="like-1" class="like__label">
+                                <span class="like__img click__active"></span>
+                            </label>
+                        </li>
+                        <li class="buttons__item">
+                            <input type="checkbox" id="cart-1" class="container__button">
+                            <label for="cart-1" class="cart__label">
+                                <span class="cart__img click__active"></span>
+                            </label>
+                        </li>
                     </ul>
-                    <a href="#" class="Buttons__anchor">Saiba Mais</a>
+                    <a href="#" class="Buttons__anchor click__active">Saiba Mais</a>
                 </div>   
             </div>
         </div>    
@@ -154,10 +166,19 @@
                     <!-- 1st column -->
                     <ul class="buttons">
                         <li class="buttons__item">
-                            <img src="./img/mobile/Fav.svg" alt="Fav Book" class="buttons__item-img" ></li>
-                        <li class="buttons__item"><img src="./img/mobile/Shop.svg" alt="Add On Cart" class="buttons__item-img" ></li>
+                            <input type="checkbox" id="like-2" class="container__button">
+                            <label for="like-2" class="like__label">
+                                <span class="like__img click__active"></span>
+                            </label>
+                        </li>
+                        <li class="buttons__item">
+                            <input type="checkbox" id="cart-2" class="container__button">
+                            <label for="cart-2" class="cart__label">
+                                <span class="cart__img click__active"></span>
+                            </label>
+                        </li>
                     </ul>
-                    <a href="#" class="Buttons__anchor">Saiba Mais</a>
+                    <a href="#" class="Buttons__anchor click__active">Saiba Mais</a>
                 </div>
             </div>
         </div>
@@ -165,14 +186,14 @@
     <section class="topics">
         <h2 class="topics__title">TÓPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="topics__list">
-            <li class="topics__item"><a href="#"class="topics__anchor">Android</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">Marketing Digital</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">Agile</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">Startups</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">HTML & CSS</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">Python</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">OO</a></li>
-            <li class="topics__item"><a href="#"class="topics__anchor">Java</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Android</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Marketing Digital</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Agile</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Startups</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">HTML & CSS</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Python</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">OO</a></li>
+            <li class="topics__item click__active"><a href="#"class="topics__anchor">Java</a></li>
         </ul>
     </section>
     <section class="contact">
@@ -184,7 +205,7 @@
     </section>
     <footer class="footer">
         <div class="alura">
-            <a href="https://www.alura.com.br"><img src="./img/mobile/alura.png" alt="Logo da Alura" class="footer__logo"></a>
+            <a href="https://www.alura.com.br"><img src="./img/mobile/alura.png" alt="Logo da Alura" class="footer__logo click__active"></a>
             <a href="https://www.alura.com.br" class="footer__name">Grupo Alura</a>
         </div>
         <ul class="footer__list">
